@startuml DIP New
Interface EncodingService {
    void encodeWithFiles() throws IOException
    void encodeBasedOnNetworkAndDatabase() throws IOException
}
Interface DatabaseService {
    int write(String)
}

class EncodingModule {

}

class MyDatabase {

}

class EncodingModuleClient {

}

DatabaseService <|-- MyDatabase
EncodingService <|-- EncodingModule
DatabaseService <.. EncodingModule: use
EncodingService <.. EncodingModuleClient: use
@enduml